--- a/style.css
+++ b/style.css
@@ -1,324 +1,366 @@
-            *{
-                font-family: 'Rubik', sans-serif;
-            }
-            html{
-                scroll-behavior: smooth;
-            }
-            body{
-                margin: 0;
-                padding: 0;         
-                background: #FFF7D4;                
-            }
-            /*--Header--*/
-            header{
-                background-color: #FFD95A;
-                /*background-image: linear-gradient(to top, rgba(255,0,0,0), rgba(29,27,31,1));*/
-                padding: 7px 4.5%;
-                
-            }
-            nav{
-                display: flex;
-                align-items: center;
-                justify-content: space-between;
-            }
-            .right-part{
-                list-style: none;
-            }
-            .right-part li{
-                display: inline-block;
-            }
-            .logo{
-                width: 145px;
-            }
-            .left-part a{
-                text-decoration: none;
-                color: #191609;
-                font-weight: 500;
-                margin: 0 16px 0 0;
-            }
-            .nav ul{
-                flex: 1;
-                text-align: right;
-            }
-            nav ul li{
-                display: inline-block;
-                list-style: none;
-                margin: 0 10px 0 0;
-            }
-            nav ul li a{
-                color: #191609;
-                text-decoration: none;
-                text-shadow: 1px 1px 4px var(#FF725E), 2px 2px 50px var(#558EFE);
-                font-size: 16px;
-                font-weight: 500;
-                font-style: 'Open Sans';
-                position: relative;
-            }
-            .underline::after{
-                content: '';
-                width: 0;
-                height: 3px;
-                background: #FF725E;
-                position: absolute;
-                left: 0;
-                bottom: -4px;
-                transition: 0.5s;
-            }
-            .underline:hover::after{
-                width:100%;
-            }
-            .bold{
-                background-color: #C07F00;
-                padding: 4.5px 10px;
-                border-radius: 4px;
-            }
-            .bold.none-underline{
-                background-color: #03C988;
-            }
-            /*--Header--*/
-            .fa-solid.fa-book{
-                margin-right: 5px;
-            }
-            #first-section{
-                margin-top: 9vh;
-                padding: 0px 4.5%;
-                display: flex;
-                flex-wrap: wrap;
-                align-items: center;               
-            }
-            .welcome-img{
-                object-fit: contain;
-                margin-left: auto;
-                margin-right: 0;
-            }
-            .welcome-img img{
-                width: 70vh;
-                
-            }            
-            .left-sector h1{
-                font-size: 7.2vh;
-                font-weight: 600;
-            }            
-            .btn{
-                transition: all 0.2s ease;
-                cursor: pointer;
-                text-decoration: none;
-                color: #191609;
-                background-color: #FF725E;
-                font-weight: 500;
-                font-size: 20px;
-                padding: 6.5px 23px;
-                border-radius: 4px;
-                margin-right: 10px;
-                
-            }
-            .how{
-                position: relative;
-                font-weight: 500;
-                padding: 6.5px 23px;
-                font-size: 20px;
-                color: #191609;
-                border-radius: 4px;
-                margin-right: 10px;
-                text-decoration: none;
-                background-color: #FF725E;
-                animation: shake 2s infinite;
-                transform-origin: center center;
-            }
-            @keyframes shake{
-                10% { transform: translate(-2.5%, -2.5%) scale(1.05) rotate(5deg); }
-                20% { transform: translate(-2.5%, -2.5%) scale(1.05) rotate(-5deg); }
-                30% { transform: translate(-2.5%, -2.5%) scale(1.05) rotate(5deg); }
-                40% { transform: none; }
-            }
-            .btn.btn2{
-                background-color: #03C988;
-            }
-            /*--swiper--*/
-            .cards{
-                padding: 5% 0;
-                display: flex;
-                justify-content: space-between;             
-                width: 114vh;
-                height: 23.5rem;
-            }
-            /*--.swiper{                
-              height: 48vh;
-            }--*/
-        
-            .swiper-slide {
-              text-align: left;
-              font-size: 18px;
-              background: #4C3D3D;
-              border-radius: 10px;
-              width: 15.5rem;
-              height: auto;
-            }        
-            .swiper-slide img {
-                border-radius: 10px 10px 0 0;
-                display: block;
-                width: 100%;
-                height: 40%;
-                object-fit: cover;
-            }
-            .swiper-text{
-                display: flex;
-                align-items: center;
-                margin: 0;
-                padding: 20px 15px;
-                display: block;
-                object-fit: cover;
-                
-            }
-            .swiper-slide h4{
-                padding: 0px 0 10px;
-                margin: 0;
-                color: #fff;
-                font-size: 19px;
-            }
-            .swiper-slide p{
-                padding: 0px 0 20px;
-                margin: 0;
-                color: #fff;
-                font-size: 15px;
-            }
-            .swiper-slide a{
-                text-decoration: none;
-                color: #fff;
-                font-size: 15px;
-            }
-            .btnn.btn-primary{
-                text-decoration: none;
-                color: #fff;
-                border: 1px solid #fff;
-                padding: 7px 10px;
-                border-radius: 25px;
-                width: fit-content;
-                text-align: center;
-                
-            }
-            .swiper-pagination{
-                color: #FFD95A;
-            }
-            /*--swiper--*/
-            .con-background{
-                margin: 20vh 0;
-                display: flex;
-                flex-wrap: wrap;
-                align-items: center;
-                height: auto;
-                padding: 9% 4.5%;
-                background-color: #5E5050;
-                
-            }
-            .con-background img{
-                width: 30%;
-                object-fit: contain;
-                margin-left: 0;
-                margin-right: auto;
-                transform: scaleX(-1);
-            }
-            .blockk h1{
-                text-align: right;
-                font-size: 7.2vh;
-                font-weight: 600;
-                color: #FFD95A;
-            }
-            .started-text {
-                color: #03C988;
-            }
-            .container a i{
-                margin-right: 10px;
-            }
-            #cards-2{
-                width: 38.5rem;               
-                display: flex;
-                justify-content: space-between;
-                flex-wrap: wrap;
-            }
-            .container-2{
-                text-decoration: none;
-                margin-top: 8px;
-                text-align: center;
-                display: block;
-                align-items: center;
-                padding: 4px 10px;
-                width: 8rem;
-                background-color: #FFD95A;
-                border-radius: 8px;
-            }
-            .container-2 h4{
-                font-size: 30px;
-            }
-            .container-2 p{
-                color: #191609;                
-                font-weight: 600;
-                font-size: 15px;
-            }
-            .container-2.cn4 h4{
-                visibility: hidden;
-            }
-            .container-2.cn4 p{
-                visibility: hidden;
-            }
-            /*--container clours--*/
-            .container-2.cn1{
-                background-color: #E0BF80;
-            }
-            .container-2.cn2{
-                background-color: #C68C1A;
-            }          
-            .container-2.cn3{
-                background-color: #865900;
-            } 
-            .container-2.cn4{
-                background-color: #B7B1B1;
-            } 
-            .container-2.cn5{
-                background-color: #734C00;
-            } 
-            .container-2.cn6{
-                background-color: #D3A54D;
-            } 
-            .container-2.cn7{
-                background-color: #AD7200;
-            } 
-            .container-2.cn8{
-                background-color: #604000;
-            } 
-            #copyright{
-                position: relative;
-                bottom: 0;
-                padding: 85px 0;              
-                background: #4C411B        
-            }
-            #copyright p{
-                color: #fff0bd;
-                font-family: 'Rubik', sans-serif;
-                font-size: 12.3px;
-                font-style: light;
-                font-weight: 600;
-                line-height: normal;
-                text-align: center;
-            }
-            .icons2{
-                justify-content: center;
-                display: flex;
-            }
-            .icons2 a{
-                padding: 0 5px;
-                text-decoration: none;
-                font-size: 26.5px;
-                margin-top: 1.5px;
-                color: #fff;
-                display: inline-block;
-                transition: transform 0.5s;
-            }
-            .icons2 a i{
-                color: #b3983f;
-                cursor: pointer;
-            }
-            .icons2 a i:hover{
-                color: #fff;
-                opacity: 1;
-            }
+*{
+    font-family: 'Rubik', sans-serif;
+}
+html{
+    scroll-behavior: smooth;
+}
+body{
+    margin: 0;
+    padding: 0;         
+    background: #FFF7D4;                
+}
+/*--Header--*/
+header {
+    background-color: #FFD95A;
+    /*background-image: linear-gradient(to top, rgba(255,0,0,0), rgba(29,27,31,1));*/
+    padding: 7px 4.5%;
+
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.right-part {
+    list-style: none;
+}
+
+.right-part li {
+    display: inline-block;
+}
+
+.logo {
+    width: 145px;
+}
+
+.left-part {
+    padding: 0;
+}
+
+.left-part a {
+    margin: 0 16px 0 0;
+    z-index: 1;
+}
+
+.nav ul {
+    flex: 1;
+    text-align: right;
+}
+
+nav ul li {
+    display: inline-block;
+    list-style: none;
+    margin: 0 10px 0 0;
+}
+
+nav ul li a {
+    color: #191609;
+    text-decoration: none;
+    text-shadow: 1px 1px 4px var(#FF725E), 2px 2px 50px var(#558EFE);
+    font-size: 16px;
+    font-weight: 500;
+    font-style: 'Open Sans';
+    position: relative;
+}
+
+.underline::after {
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #FF725E;
+    position: absolute;
+    left: 0;
+    bottom: -4px;
+    transition: 0.5s;
+}
+
+.underline:hover::after {
+    width: 100%;
+}
+
+.bold {
+    background-color: #C07F00;
+    padding: 4.5px 10px;
+    border-radius: 4px;
+}
+
+.bold.none-underline {
+    background-color: #03C988;
+}           
+/*--Header--*/
+.fa-solid.fa-book{
+    margin-right: 5px;
+}
+#first-section{
+    margin-top: 9vh;
+    padding: 0px 4.5%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;               
+}
+.welcome-img{
+    object-fit: contain;
+    margin-left: auto;
+    margin-right: 0;
+}
+.welcome-img img{
+    width: 70vh;
+    
+}            
+.left-sector h1{
+    font-size: 7.2vh;
+    font-weight: 600;
+}            
+.btn{
+    transition: all 0.2s ease;
+    cursor: pointer;
+    text-decoration: none;
+    color: #191609;
+    background-color: #FF725E;
+    font-weight: 500;
+    font-size: 20px;
+    padding: 6.5px 23px;
+    border-radius: 4px;
+    margin-right: 10px;
+    
+}
+.how{
+    position: relative;
+    font-weight: 500;
+    padding: 6.5px 23px;
+    font-size: 20px;
+    color: #191609;
+    border-radius: 4px;
+    margin-right: 10px;
+    text-decoration: none;
+    background-color: #FF725E;
+    animation: shake 2s infinite;
+    transform-origin: center center;
+}
+@keyframes shake{
+    10% { transform: translate(-2.5%, -2.5%) scale(1.05) rotate(5deg); }
+    20% { transform: translate(-2.5%, -2.5%) scale(1.05) rotate(-5deg); }
+    30% { transform: translate(-2.5%, -2.5%) scale(1.05) rotate(5deg); }
+    40% { transform: none; }
+}
+.btn.btn2{
+    background-color: #03C988;
+}
+/*--swiper--*/
+.cards{
+    padding: 5% 0;
+    display: flex;
+    justify-content: space-between;             
+    width: 114vh;
+    height: 23.5rem;
+}
+/*--.swiper{                
+    height: 48vh;
+}--*/
+
+.swiper-slide {
+    text-align: left;
+    font-size: 18px;
+    background: #4C3D3D;
+    border-radius: 10px;
+    width: 15.5rem;
+    height: auto;
+}        
+.swiper-slide img {
+    border-radius: 10px 10px 0 0;
+    display: block;
+    width: 100%;
+    height: 40%;
+    object-fit: cover;
+}
+.swiper-text{
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 20px 15px;
+    display: block;
+    object-fit: cover;
+    
+}
+.swiper-slide h4{
+    padding: 0px 0 10px;
+    margin: 0;
+    color: #fff;
+    font-size: 19px;
+}
+.swiper-slide p{
+    padding: 0px 0 20px;
+    margin: 0;
+    color: #fff;
+    font-size: 15px;
+}
+.swiper-slide a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 15px;
+}
+.btnn.btn-primary{
+    text-decoration: none;
+    color: #fff;
+    border: 1px solid #fff;
+    padding: 7px 10px;
+    border-radius: 25px;
+    width: fit-content;
+    text-align: center;
+    
+}
+.swiper-pagination{
+    color: #FFD95A;
+}
+/*--swiper--*/
+.con-background{
+    margin: 20vh 0 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    height: auto;
+    padding: 9% 4.5%;
+    background-color: #5E5050;
+    
+}
+.con-background img{
+    width: 30%;
+    object-fit: contain;
+    margin-left: 0;
+    margin-right: auto;
+    transform: scaleX(-1);
+}
+.blockk h1{
+    text-align: right;
+    font-size: 7.2vh;
+    font-weight: 600;
+    color: #FFD95A;
+}
+.started-text {
+    color: #03C988;
+}
+.container a i{
+    margin-right: 10px;
+}
+#cards-2{
+    width: 38.5rem;               
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.container-2{
+    text-decoration: none;
+    margin-top: 8px;
+    text-align: center;
+    display: block;
+    align-items: center;
+    padding: 4px 10px;
+    width: 8rem;
+    background-color: #FFD95A;
+    border-radius: 8px;
+}
+.container-2 h4{
+    font-size: 30px;
+}
+.container-2 p{
+    color: #191609;                
+    font-weight: 600;
+    font-size: 15px;
+}
+.container-2.cn4 h4{
+    visibility: hidden;
+}
+.container-2.cn4 p{
+    visibility: hidden;
+}
+/*--container clours--*/
+.container-2.cn1{
+    background-color: #E0BF80;
+}
+.container-2.cn2{
+    background-color: #C68C1A;
+}          
+.container-2.cn3{
+    background-color: #865900;
+} 
+.container-2.cn4{
+    background-color: #B7B1B1;
+} 
+.container-2.cn5{
+    background-color: #734C00;
+} 
+.container-2.cn6{
+    background-color: #D3A54D;
+} 
+.container-2.cn7{
+    background-color: #AD7200;
+} 
+.container-2.cn8{
+    background-color: #604000;
+}
+/*--container clours--*/
+/*--Last section--*/
+.last-section{
+    display: flex;
+    justify-content: space-between;
+    padding: 15% 4.5%;
+}
+.last-section img{
+    width: 30%;
+}
+.gradient-container {
+    border-radius: 10px;
+    padding: 2.5% 2.5%;
+    background: linear-gradient(to top right, #C07F00, #FFD95A);
+    /* Add any other styles you need for your container */
+    width: 52%;
+    height: 100%; /* Adjust the height as needed */
+    display: fblock;
+    align-items: center;
+}
+.gradient-container h1{
+    font-size: 7.2vh;
+    color: #191609;
+}
+.gradient-container p{
+    font-weight: 600;
+}
+/*--Last section--*/
+#copyright{
+    position: relative;
+    bottom: 0;
+    padding: 85px 0;              
+    background: #4C411B        
+}
+#copyright p{
+    color: #fff0bd;
+    font-family: 'Rubik', sans-serif;
+    font-size: 12.3px;
+    font-style: light;
+    font-weight: 600;
+    line-height: normal;
+    text-align: center;
+}
+.icons2{
+    justify-content: center;
+    display: flex;
+}
+.icons2 a{
+    padding: 0 5px;
+    text-decoration: none;
+    font-size: 26.5px;
+    margin-top: 1.5px;
+    color: #fff;
+    display: inline-block;
+    transition: transform 0.5s;
+}
+.icons2 a i{
+    color: #b3983f;
+    cursor: pointer;
+}
+.icons2 a i:hover{
+    color: #fff;
+    opacity: 1;
+}
