--- a/style.css
+++ b/style.css
@@ -245,7 +245,8 @@ nav ul li a {
     margin-right: 10px;
 }
 #cards-2{
-    width: 40em;               
+    margin-top: 100px;
+    width: 40rem;               
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
@@ -294,15 +295,18 @@ margin: 14px 0 0; /* Adjust spacing between icon and text */
 .container-2.cn1{
     transform: rotate(15deg);
     background-color: #ad7200;
+    animation: float 5s infinite;
 }
 .container-2.cn2{
     background-color: #C68C1A;
 }          
 .container-2.cn3{
+    animation: float 6s infinite;
     transform: rotate(-10deg);
     background-color: #865900;
 } 
 .container-2.cn4{
+    animation: float 4s infinite;
     transform: rotate(-25deg);
     background-color: #B7B1B1;
 } 
@@ -312,6 +316,7 @@ margin: 14px 0 0; /* Adjust spacing between icon and text */
 .container-2.cn6{
     transform: rotate(20deg);
     background-color: #D3A54D;
+    animation: float 3.6s infinite;
 } 
 .container-2.cn7{
     background-color: #AD7200;
@@ -347,6 +352,24 @@ margin: 14px 0 0; /* Adjust spacing between icon and text */
     font-weight: 600;
 }
 /*--Last section--*/
+/*-blobs-*/
+.blobs{
+    display: flex;
+    justify-content: center;
+}
+.blob1 {
+    left: 60%;   
+    margin: 0;
+    width: 550px;
+    height: 560px;
+    background-color: #AD7200;
+    border-radius: 30% 50% 10% 90%;
+    filter: blur(190px);
+    position: absolute;
+    content: '';
+    z-index: -1;
+}
+  /*-blobs-*/
 #copyright{
     position: relative;
     bottom: 0;
@@ -382,4 +405,18 @@ margin: 14px 0 0; /* Adjust spacing between icon and text */
 .icons2 a i:hover{
     color: #fff;
     opacity: 1;
+}
+@keyframes float {
+	0% {
+		box-shadow: 0 6px 5px 0px #2a2a2a;
+		transform: translatey(0px);
+	}
+	50% {
+		box-shadow: 0 4px 5x 0px #2a2a2a;
+		transform: translatey(-20px);
+	}
+	100% {
+		box-shadow: 0 2px 5px 0px #2a2a2a;
+		transform: translatey(0px);
+	}
 }
